Open jvm to reflection required by IcebergStreamWriter
Signed-off-by: Marvin Froeder <marvin@datasqrl.com>